Supercluster/Cluster01/Webserver1/Namespace.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
# kubectl apply -f Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webserver1
---
