Supercluster/Cluster01/Webserver1/Deployment.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver1-deployment
  namespace: webserver1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver1
  template:
    metadata:
      labels:
        app: webserver1
    spec:
      containers:
      - name: webserver1-container
        image: python:3.9-slim
        command: ["python3", "-m", "http.server", "8080", "--directory", "/app", "--bind", "0.0.0.0"]
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        volumeMounts:
        - name: webserver1-volume
          mountPath: /app
      volumes:
      - name: webserver1-volume
        emptyDir: {}
---
